objects/EUR_CRM_JB_Store_Check_Visit__c.object
<CustomObject>
    <description>PREU JB Data Model</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Store Check Visits</relationshipLabel>
        <relationshipName>Store_Check_Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_JB_End_Datetime__c</fullName>
        <label>End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Start_Datetime__c</fullName>
        <label>Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Store_Checker_Name__c</fullName>
        <label>Store Checker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Store Check Visit (EU)</label>
    <nameField>
        <displayFormat>SCH-{00000000}</displayFormat>
        <label>Store Check Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Check Visits (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>